CProgrammierung/eval_pipline/resources/testcases/bad/fail_self_edges.stdin
kj26865j7kbvwie:s3y0fr51,ys2ceh7i4,kj26865j7kbvwie
3j5dk7s4056g:kj26865j7kbvwie,jyvxdlo2ne6g,s3y0fr51,ys2ceh7i4,5j1ulnd7sqqk7drz
jyvxdlo2ne6g:s3y0fr51,kj26865j7kbvwie,n66my6m7om
1xbin:s3y0fr51,n66my6m7om,3j5dk7s4056g,jyvxdlo2ne6g,2ckh234f,bk2un515xc5xj
n66my6m7om:s3y0fr51,y025mg8
2ckh234f:n66my6m7om,bk2un515xc5xj,s3y0fr51,y025mg8,vzvdc4
bk2un515xc5xj:y025mg8,n66my6m7om,vzvdc4
vzvdc4:y025mg8
4lnicxwwcjg6p0:vzvdc4,61zql5,bk2un515xc5xj,y025mg8,nxg2sg,eno95
61zql5:nxg2sg,y025mg8,vzvdc4,eno95,8gw
nxg2sg:vzvdc4,oqv3f2avz
eno95:nxg2sg,oqv3f2avz,i70vlmqquxym0
8gw:eno95,oqv3f2avz,nxg2sg,i70vlmqquxym0
i70vlmqquxym0:oqv3f2avz,n679tby2xci3h0se6
7avgvus53iakx:i70vlmqquxym0,n679tby2xci3h0se6,8gw,oqv3f2avz
n679tby2xci3h0se6:oqv3f2avz
6z4j2ocsh8ymb4:n679tby2xci3h0se6,i70vlmqquxym0,7avgvus53iakx,oyk39iubyheko
36n5rhzz9didetrxbacw:6z4j2ocsh8ymb4,4hh2td5,7avgvus53iakx,n679tby2xci3h0se6,oyk39iubyheko,a1m
4hh2td5:oyk39iubyheko,n679tby2xci3h0se6,6z4j2ocsh8ymb4,a1m,kk04tihdzb-958
a1m:oyk39iubyheko,kk04tihdzb,h0n5p611omisux
kk04tihdzb:oyk39iubyheko
0beau3g:kk04tihdzb,h0n5p611omisux,oyk39iubyheko,a1m,8qavressgm,ys2ceh7i4
h0n5p611omisux:kk04tihdzb,ys2ceh7i4
8qavressgm:h0n5p611omisux,ys2ceh7i4,kk04tihdzb,kj26865j7kbvwie
5j1ulnd7sqqk7drz:ys2ceh7i4,kj26865j7kbvwie,h0n5p611omisux,8qavressgm,jyvxdlo2ne6g-620
A:s3y0fr51
I:58
